[tool.poetry]
name = "fencing-estimator"
version = "0.1.0"
description = ""
authors = ["NEGAX-ADMIN <jsa65x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.122.1"
uvicorn = "^0.38.0"
requests = "^2.32.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
